--- a/app/views/application/hello.html.erb
+++ b/app/views/application/hello.html.erb
@@ -1,5 +1,12 @@
+<% if !logged_in? %>
+<%= link_to 'Log in', login_path %>
+<% else %>
+
+
 <h1>Hi, <%= session[:name] %>.</h1>
 <%= form_tag ({controller: 'sessions', action: 'destroy', method: 'post'}) do %>
   <input type=submit value='logout'>
 <% end %>
 
+
+<% end %>
